--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<name>qalingo-b2c-web-remote</name>
 	<description>{Q} Commerce Solution Project</description>
 	<url>http://www.hoteia.com</url>
-	<inceptionYear>2012-2013</inceptionYear>
+	<inceptionYear>2012-2014</inceptionYear>
 	<organization>
 		<name>Hoteia</name>
 		<url>http://www.hoteia.com</url>
@@ -344,7 +344,7 @@
 				<version>2.1</version>
 			</dependency>
 
-			<!-- Cache dependencies -->
+			<!-- Cache dependencies 
 			<dependency>
 				<groupId>net.sf.ehcache</groupId>
 				<artifactId>ehcache-core</artifactId>
@@ -354,7 +354,7 @@
 				<groupId>net.sf.ehcache</groupId>
 				<artifactId>ehcache-web</artifactId>
 				<version>2.0.4</version>
-			</dependency>
+			</dependency>-->
 
 			<!-- MySQL database driver -->
 			<dependency>
