--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
 
 	<properties>
 		<root.basedir>${project.basedir}</root.basedir>
-		<qalingo.engine.version>0.7.1-SNAPSHOT</qalingo.engine.version>
 		<packaging.excludes>WEB-INF/classes/*.properties</packaging.excludes>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<solr.server.url>http://localhost:14080/solr</solr.server.url>
@@ -60,21 +59,21 @@
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-common-shared-configuration</artifactId>
-				<version>${qalingo.engine.version}</version>
+				<version>${project.version}</version>
 				<classifier>resources</classifier>
 				<type>zip</type>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-frontoffice-shared-configuration</artifactId>
-				<version>${qalingo.engine.version}</version>
+				<version>${project.version}</version>
 				<classifier>resources</classifier>
 				<type>zip</type>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-api-core-common</artifactId>
-				<version>${qalingo.engine.version}</version>
+				<version>${project.version}</version>
 				<exclusions>
 					<exclusion>
 						<artifactId>log4j</artifactId>
@@ -85,17 +84,17 @@
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-api-core-jms</artifactId>
-				<version>${qalingo.engine.version}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-api-core-jax-rs</artifactId>
-				<version>${qalingo.engine.version}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-api-core-jax-ws</artifactId>
-				<version>${qalingo.engine.version}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
@@ -105,7 +104,7 @@
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-i18n-properties</artifactId>
-				<version>${qalingo.engine.version}</version>
+				<version>${project.version}</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.apache.poi</groupId>
@@ -116,12 +115,12 @@
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-api-web-remote-rest</artifactId>
-				<version>${qalingo.engine.version}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-api-web-remote-ws</artifactId>
-				<version>${qalingo.engine.version}</version>
+				<version>${project.version}</version>
 			</dependency>
 
 			<!-- Commons libs -->
