--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.hoteia.qalingo</groupId>
 	<artifactId>qalingo-web-remote</artifactId>
-	<version>0.7.1-SNAPSHOT</version>
+	<version>0.8.0</version>
 	<packaging>pom</packaging>
 	<name>qalingo-web-remote</name>
 	<description>{Q} Commerce Solution Project</description>
@@ -24,6 +24,7 @@
 
 	<properties>
 		<root.basedir>${project.basedir}</root.basedir>
+		<qalingo.engine.version>0.7.1-SNAPSHOT</qalingo.engine.version>
 		<packaging.excludes>WEB-INF/classes/*.properties</packaging.excludes>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<solr.server.url>http://localhost:14080/solr</solr.server.url>
@@ -59,21 +60,21 @@
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-common-shared-configuration</artifactId>
-				<version>${project.version}</version>
+				<version>${qalingo.engine.version}</version>
 				<classifier>resources</classifier>
 				<type>zip</type>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-frontoffice-shared-configuration</artifactId>
-				<version>${project.version}</version>
+				<version>${qalingo.engine.version}</version>
 				<classifier>resources</classifier>
 				<type>zip</type>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-api-core-common</artifactId>
-				<version>${project.version}</version>
+				<version>${qalingo.engine.version}</version>
 				<exclusions>
 					<exclusion>
 						<artifactId>log4j</artifactId>
@@ -84,17 +85,17 @@
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-api-core-jms</artifactId>
-				<version>${project.version}</version>
+				<version>${qalingo.engine.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-api-core-jax-rs</artifactId>
-				<version>${project.version}</version>
+				<version>${qalingo.engine.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-api-core-jax-ws</artifactId>
-				<version>${project.version}</version>
+				<version>${qalingo.engine.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
@@ -104,7 +105,7 @@
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-i18n-properties</artifactId>
-				<version>${project.version}</version>
+				<version>${qalingo.engine.version}</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.apache.poi</groupId>
@@ -115,12 +116,12 @@
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-api-web-remote-rest</artifactId>
-				<version>${project.version}</version>
+				<version>${qalingo.engine.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>qalingo-api-web-remote-ws</artifactId>
-				<version>${project.version}</version>
+				<version>${qalingo.engine.version}</version>
 			</dependency>
 
 			<!-- Commons libs -->
