--- a/webapp-remotes/pom.xml
+++ b/webapp-remotes/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>pom</packaging>
 	<name>{Q} Commerce Solution Remotes **************</name>
 	<description>{Q} Commerce Solution Remotes webapps</description>
-	<url>http://www.hoteia.com</url>
+	<url>http://www.qalingo.com</url>
 	<organization>
 		<name>Hoteia</name>
 		<url>http://www.hoteia.com</url>
