--- a/webapp-remotes/webapp-remote-rest/pom.xml
+++ b/webapp-remotes/webapp-remote-rest/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>war</packaging>
 	<name>{Q} Commerce Solution Remote Rest webapp</name>
 	<description>{Q} Commerce Solution Remote Rest webapp</description>
-	<url>http://www.hoteia.com</url>
+	<url>http://www.qalingo.com</url>
 	<organization>
 		<name>Hoteia</name>
 		<url>http://www.hoteia.com</url>
