--- a/webapp-remotes/webapp-remote-rest/pom.xml
+++ b/webapp-remotes/webapp-remote-rest/pom.xml
@@ -82,7 +82,7 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>qalingo-api-core-jax-rs</artifactId>
+			<artifactId>qalingo-api-core-jax-rs-fo</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
