--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,6 @@
 		<url>http://www.hoteia.com</url>
 	</organization>
 
-	<scm>
-		<connection>scm:git:git@github.com:qalingo/qalingo-web-remote.git</connection>
-		<developerConnection>scm:git:git@github.com:qalingo/qalingo-web-remote.git</developerConnection>
-		<url>scm:git:git@github.com:qalingo/qalingo-web-remote.git</url>
-		<tag>HEAD</tag>
-	</scm>
-
 	<properties>
 		<root.basedir>${project.basedir}</root.basedir>
 		<qalingo.engine.version>0.8.1-SNAPSHOT</qalingo.engine.version>
@@ -480,6 +473,18 @@
 	<build>
 		<plugins>
 			<plugin>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.4.2</version>
+				<dependencies>
+					<!-- This dependency to fix the issue with jenkisn/maven-release/version not changed in the pom.xml-->
+					<dependency>
+						<groupId>org.apache.maven.scm</groupId>
+						<artifactId>maven-scm-provider-gitexe</artifactId>
+						<version>1.8.1</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<configuration>
@@ -630,14 +635,23 @@
 					<artifactId>maven-license-plugin</artifactId>
 					<version>1.9.0</version>
 				</plugin>
+				<!--
 				<plugin>
 					<artifactId>maven-release-plugin</artifactId>
 					<version>2.3.2</version>
 				</plugin>
+				-->
 			</plugins>
 		</pluginManagement>
 	</build>
 
+	<scm>
+		<connection>scm:git:git@github.com:qalingo/qalingo-web-remote.git</connection>
+		<developerConnection>scm:git:git@github.com:qalingo/qalingo-web-remote.git</developerConnection>
+		<url>scm:git:git@github.com:qalingo/qalingo-web-remote.git</url>
+		<tag>HEAD</tag>
+	</scm>
+	
 	<distributionManagement>
 		<repository>
 			<id>releases</id>
